[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.4"
]
build-backend = "setuptools.build_meta"

# pyproject.toml
[tool.setuptools_scm]
write_to = "easemail/__version__.py"


[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = python3.7

[testenv]
# If you add a new dep here you probably need to add it in setup.py as well
passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
setenv =
    PYTHON_ENV = dev
deps =
    pytest
    pytest-cov
    coveralls
commands =
    pytest -s
    py.test --cov ./easemail
    coveralls
"""
