[metadata]
name = easemail
version = 0.0.3
author = Niclas D. Gesing
author_email = nicdomgesing@gmail.com
description = A python wrapper for mailing with any email-address. Using win32.client and Outlook or yagmail.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NicDom/easemail
license = MIT
project_urls =
    Bug Tracker = https://github.com/NicDom/easemail/issues
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Customer Service
    Intended Audience :: System Administrators
    Topic :: Communications :: Email
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution
    Topic :: System :: Systems Administration
    Topic :: Utilities


[options]
zip_safe = False
package_dir =
    =easemail
packages = find:
install_requires =
    requests
    importlib
    yagmail>=0.14.260
    pywin32;platform_system=='Windows'
    tabulate>=0.8.9
    beautifulsoup4
    urllib3
python_requires = >=3.6

[options.packages.find]
where = easemail

[options.package_data]
* = /data/*.json
